--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 title = "P3N"
-baseURL = "https://p3n.pensplace.co.uk/"
+baseURL = "https://music.pensplace.co.uk/"
 theme = "bilberry-hugo-theme"
 
 # Generate the robots.txt file for SEO
